add bangla localizaton for reg form

--- a/packages/esm-patient-registration-app/translations/bn.json
+++ b/packages/esm-patient-registration-app/translations/bn.json
@@ -94,5 +94,39 @@
   "updatePatientSuccessSnackbarSubtitle": "রোগীর তথ্য সফলভাবে আপডেট করা হয়েছে",
   "updatePatientSuccessSnackbarTitle": "রোগীর বিবরণ আপডেট",
   "yearsEstimateRequired": "বছরের অনুমান প্রয়োজন",
-  "yes": "হ্যাঁ"
+  "yes": "হ্যাঁ",
+  "bloodGroup":"রক্তের গ্রুপ",
+  "religion":"ধর্ম",
+  "birthPlace":"জন্মস্থান",
+  "nationality":"নাগরিকত্ব",
+  "occupation":"পেশা",
+  "eduQualification":"শিক্ষাগত যোগ্যতা",
+  "disabilityType":"প্রতিবন্ধিতার ধরণ",
+  "ethnicity":"জাতিগত",
+  "gender": "লিঙ্গ",
+  "mobileNo": "মোবাইল নম্বর",
+  "maritalStatus": "বৈবাহিক অবস্থা",
+  "spouseNameEnglish": "স্বামী/স্ত্রীর নাম",
+  "spouseNameBangla": "স্বামী/স্ত্রীর নাম বাংলায়",
+  "idType": "পরিচয়পত্রের ধরণ",
+  "nid": "জাতীয় পরিচয়পত্র নম্বর",
+  "brn": "জন্ম নিবন্ধন নম্বর",
+  "fullNameBangla": "পূর্ণ নাম বাংলায়",
+  "motherName": "মায়ের নাম",
+  "motherNameBangla": "মায়ের নাম বাংলায়",
+  "fatherNameEnglish": "বাবার নাম",
+  "fatherNameBangla": "বাবার নাম বাংলায়",
+  "divorced": "তালাকপ্রাপ্ত",
+  "married": "বিবাহিত",
+  "single": "অবিবাহিত",
+  "islam": "ইসলাম",
+  "buddhism": "বৌদ্ধ ধর্ম",
+  "hinduism": "হিন্দু ধর্ম",
+  "christianity": "খ্রিস্টীয়তা",
+  "none":"কোনোটা না",
+  "dob":"জন্ম তারিখ",
+  "birthDate":"জন্ম তারিখ",
+  "search":"অনুসন্ধান",
+  "id":"আইডি"
+
 }
