complete reg page localization

--- a/packages/esm-patient-registration-app/translations/bn.json
+++ b/packages/esm-patient-registration-app/translations/bn.json
@@ -127,6 +127,8 @@
   "dob":"জন্ম তারিখ",
   "birthDate":"জন্ম তারিখ",
   "search":"অনুসন্ধান",
-  "id":"আইডি"
+  "id":"আইডি",
+  "locationsSection":"ঠিকানা বিবরণ",
+  "otherInfoSection":"অন্যান্য তথ্য"
 
 }
