--- a/packages/esm-patient-registration-app/translations/bn.json
+++ b/packages/esm-patient-registration-app/translations/bn.json
@@ -129,6 +129,16 @@
   "search":"অনুসন্ধান",
   "id":"আইডি",
   "locationsSection":"ঠিকানা বিবরণ",
-  "otherInfoSection":"অন্যান্য তথ্য"
+  "otherInfoSection":"অন্যান্য তথ্য",
+  "0": "০",
+  "1": "১",
+  "2": "২",
+  "3": "৩",
+  "4": "৪",
+  "5": "৫",
+  "6": "৬",
+  "7": "৭",
+  "8": "৮",
+  "9": "৯"
 
 }
