fix custum person create api not workking

--- a/packages/esm-patient-registration-app/translations/bn.json
+++ b/packages/esm-patient-registration-app/translations/bn.json
@@ -139,6 +139,26 @@
   "6": "৬",
   "7": "৭",
   "8": "৮",
-  "9": "৯"
-
+  "০": "0",
+  "১": "1",
+  "২": "2",
+  "৩": "3",
+  "৪": "4",
+  "৫": "5",
+  "৬": "6",
+  "৭": "7",
+  "৮": "8",
+  "memberList":"সদস্য তালিকা",
+  "referredMemberList":"সূচিত সদস্য তালিকা",
+  "memberName": "সদস্যের নাম",
+  "memberId": "সদস্য আইডি",
+  "mobileNumber": " মোবাইল নম্বর",
+  "ward": "ওয়ার্ড",
+  "block": "ব্লক",
+  "si": "নং",
+  "total":"মোট",
+  "totalItems":"মোট আইটেম",
+  "itemsPerPage:":"প্রতি পাতায় আইটেম :",
+  "pageRangeText":"`নং পৃষ্ঠা ${t(total,total)} টির মধ্যে`",
+  "sarchByName/NID/BRID/Mobile":"নাম/এনআইডি/বিআরআইডি/মোবাইল দ্বারা অনুসন্ধান"
 }
