Block option added

--- a/packages/esm-patient-registration-app/translations/bn.json
+++ b/packages/esm-patient-registration-app/translations/bn.json
@@ -79,7 +79,7 @@
   "restoreRelationshipActionButton": "পুনরুদ্ধার করুন",
   "searchAddress": "ঠিকানা অনুসন্ধান করুন",
   "searchIdentifierPlaceholder": "পরিচয়পত্র অনুসন্ধান করুন",
-  "selectAnOption": "একটি বিকল্প নির্বাচন করুন",
+  "selectAnOption": "নির্বাচন করুন",
   "sexFieldLabelText": "লিঙ্গ",
   "source": "উৎস",
   "stroke": "স্ট্রোক",
@@ -95,14 +95,14 @@
   "updatePatientSuccessSnackbarTitle": "রোগীর বিবরণ আপডেট",
   "yearsEstimateRequired": "বছরের অনুমান প্রয়োজন",
   "yes": "হ্যাঁ",
-  "bloodGroup":"রক্তের গ্রুপ",
-  "religion":"ধর্ম",
-  "birthPlace":"জন্মস্থান",
-  "nationality":"নাগরিকত্ব",
-  "occupation":"পেশা",
-  "eduQualification":"শিক্ষাগত যোগ্যতা",
-  "disabilityType":"প্রতিবন্ধিতার ধরণ",
-  "ethnicity":"জাতিগত",
+  "bloodGroup": "রক্তের গ্রুপ",
+  "religion": "ধর্ম",
+  "birthPlace": "জন্মস্থান",
+  "nationality": "নাগরিকত্ব",
+  "occupation": "পেশা",
+  "eduQualification": "শিক্ষাগত যোগ্যতা",
+  "disabilityType": "প্রতিবন্ধিতার ধরণ",
+  "ethnicity": "জাতিগত",
   "gender": "লিঙ্গ",
   "mobileNo": "মোবাইল নম্বর",
   "maritalStatus": "বৈবাহিক অবস্থা",
@@ -123,13 +123,13 @@
   "buddhism": "বৌদ্ধ ধর্ম",
   "hinduism": "হিন্দু ধর্ম",
   "christianity": "খ্রিস্টীয়তা",
-  "none":"কোনোটা না",
-  "dob":"জন্ম তারিখ",
-  "birthDate":"জন্ম তারিখ",
-  "search":"অনুসন্ধান",
-  "id":"আইডি",
-  "locationsSection":"ঠিকানা বিবরণ",
-  "otherInfoSection":"অন্যান্য তথ্য",
+  "none": "কোনোটা না",
+  "dob": "জন্ম তারিখ",
+  "birthDate": "জন্ম তারিখ",
+  "search": "অনুসন্ধান",
+  "id": "আইডি",
+  "locationsSection": "ঠিকানা বিবরণ",
+  "otherInfoSection": "অন্যান্য তথ্য",
   "0": "০",
   "1": "১",
   "2": "২",
@@ -148,21 +148,26 @@
   "৬": "6",
   "৭": "7",
   "৮": "8",
-  "memberList":"সদস্য তালিকা",
-  "referredMemberList":"সূচিত সদস্য তালিকা",
+  "memberList": "সদস্য তালিকা",
+  "referredMemberList": "সূচিত সদস্য তালিকা",
   "memberName": "সদস্যের নাম",
   "memberId": "সদস্য আইডি",
   "mobileNumber": " মোবাইল নম্বর",
-  "ward": "ওয়ার্ড",
-  "block": "ব্লক",
   "si": "নং",
-  "total":"মোট",
-  "totalItems":"মোট আইটেম",
-  "itemsPerPage:":"প্রতি পাতায় আইটেম :",
-  "pageRangeText":"`নং পৃষ্ঠা ${t(total,total)} টির মধ্যে`",
-  "sarchByName/NID/BRID/Mobile":"নাম/এনআইডি/বিআরআইডি/মোবাইল দ্বারা অনুসন্ধান",
-  "otherAddress":" ঠিকানা(বাড়ি নম্বর/রাস্তা নম্বর)",
-  "serviceForm":"সেবা ফর্ম",
-  "serviceHistory":"সেবার ইতিহাস",
-  "profile":"প্রোফাইল"
+  "total": "মোট",
+  "totalItems": "মোট আইটেম",
+  "itemsPerPage:": "প্রতি পাতায় আইটেম :",
+  "pageRangeText": "`নং পৃষ্ঠা ${t(total,total)} টির মধ্যে`",
+  "sarchByName/NID/BRID/Mobile": "নাম/এনআইডি/বিআরআইডি/মোবাইল দ্বারা অনুসন্ধান",
+  "otherAddress": " ঠিকানা(বাড়ি নম্বর/রাস্তা নম্বর)",
+  "serviceForm": "সেবা ফর্ম",
+  "serviceHistory": "সেবার ইতিহাস",
+  "profile": "প্রোফাইল",
+  "division": "বিভাগ",
+  "district": "জেলা",
+  "upazila": "উপজেলা",
+  "paurashava": "পৌরসভা",
+  "union": "ইউনিয়ন",
+  "ward": "ওয়ার্ড",
+  "block": "ব্লক"
 }
