--- a/packages/esm-patient-registration-app/translations/bn.json
+++ b/packages/esm-patient-registration-app/translations/bn.json
@@ -35,12 +35,14 @@
   "estimatedAgeInMonthsLabelText": "আনুমানিক বয়স (মাস)",
   "estimatedAgeInYearsLabelText": "আনুমানিক বয়স (বছর)",
   "familyNameLabelText": "পারিবারিক নাম",
+  "familyName": "পারিবারিক নাম",
   "familyNameRequired": "পারিবারিক নাম প্রয়োজন",
   "female": "মহিলা",
   "fullNameLabelText": "সম্পূর্ণ নাম",
   "genderRequired": "লিঙ্গ প্রয়োজন",
   "genderUnspecified": "লিঙ্গ নির্দিষ্ট করা হয়নি",
   "givenNameLabelText": "প্রথম নাম",
+  "givenName": "প্রথম নাম",
   "givenNameRequired": "প্রথম নাম প্রয়োজন",
   "identifierValueRequired": "পরিচয়পত্রের মান প্রয়োজন",
   "idFieldLabelText": "পরিচয়পত্র",
@@ -52,6 +54,7 @@
   "jumpTo": "লাফ দিন",
   "male": "পুরুষ",
   "middleNameLabelText": "মধ্য নাম",
+  "middleName": "মধ্য নাম",
   "negativeMonths": "নেগেটিভ মাস",
   "negativeYears": "নেগেটিভ বছর",
   "no": "না",
@@ -79,7 +82,7 @@
   "restoreRelationshipActionButton": "পুনরুদ্ধার করুন",
   "searchAddress": "ঠিকানা অনুসন্ধান করুন",
   "searchIdentifierPlaceholder": "পরিচয়পত্র অনুসন্ধান করুন",
-  "selectAnOption": "নির্বাচন করুন",
+  "selectAnOption": "একটি বিকল্প নির্বাচন করুন",
   "sexFieldLabelText": "লিঙ্গ",
   "source": "উৎস",
   "stroke": "স্ট্রোক",
@@ -95,17 +98,19 @@
   "updatePatientSuccessSnackbarTitle": "রোগীর বিবরণ আপডেট",
   "yearsEstimateRequired": "বছরের অনুমান প্রয়োজন",
   "yes": "হ্যাঁ",
-  "bloodGroup": "রক্তের গ্রুপ",
-  "religion": "ধর্ম",
-  "birthPlace": "জন্মস্থান",
-  "nationality": "নাগরিকত্ব",
-  "occupation": "পেশা",
-  "eduQualification": "শিক্ষাগত যোগ্যতা",
-  "disabilityType": "প্রতিবন্ধিতার ধরণ",
-  "ethnicity": "জাতিগত",
+  "bloodGroup":"রক্তের গ্রুপ",
+  "religion":"ধর্ম",
+  "relegion":"ধর্ম",
+  "birthPlace":"জন্মস্থান",
+  "nationality":"নাগরিকত্ব",
+  "occupation":"পেশা",
+  "eduQualification":"শিক্ষাগত যোগ্যতা",
+  "disabilityType":"প্রতিবন্ধিতার ধরণ",
+  "ethnicity":"জাতিগত",
   "gender": "লিঙ্গ",
   "mobileNo": "মোবাইল নম্বর",
   "maritalStatus": "বৈবাহিক অবস্থা",
+  "matritalStatus": "বৈবাহিক অবস্থা",
   "spouseNameEnglish": "স্বামী/স্ত্রীর নাম",
   "spouseNameBangla": "স্বামী/স্ত্রীর নাম বাংলায়",
   "idType": "পরিচয়পত্রের ধরণ",
@@ -115,6 +120,7 @@
   "motherName": "মায়ের নাম",
   "motherNameBangla": "মায়ের নাম বাংলায়",
   "fatherNameEnglish": "বাবার নাম",
+  "fatherName": "বাবার নাম",
   "fatherNameBangla": "বাবার নাম বাংলায়",
   "divorced": "তালাকপ্রাপ্ত",
   "married": "বিবাহিত",
@@ -123,13 +129,14 @@
   "buddhism": "বৌদ্ধ ধর্ম",
   "hinduism": "হিন্দু ধর্ম",
   "christianity": "খ্রিস্টীয়তা",
-  "none": "কোনোটা না",
-  "dob": "জন্ম তারিখ",
-  "birthDate": "জন্ম তারিখ",
-  "search": "অনুসন্ধান",
-  "id": "আইডি",
-  "locationsSection": "ঠিকানা বিবরণ",
-  "otherInfoSection": "অন্যান্য তথ্য",
+  "none":"কোনোটা না",
+  "dob":"জন্ম তারিখ",
+  "birthdate":"জন্ম তারিখ",
+  "birthDate":"জন্ম তারিখ",
+  "search":"অনুসন্ধান",
+  "id":"আইডি",
+  "locationsSection":"ঠিকানা বিবরণ",
+  "otherInfoSection":"অন্যান্য তথ্য",
   "0": "০",
   "1": "১",
   "2": "২",
@@ -148,21 +155,21 @@
   "৬": "6",
   "৭": "7",
   "৮": "8",
-  "memberList": "সদস্য তালিকা",
-  "referredMemberList": "সূচিত সদস্য তালিকা",
+  "memberList":"সদস্য তালিকা",
+  "referredMemberList":"সূচিত সদস্য তালিকা",
   "memberName": "সদস্যের নাম",
   "memberId": "সদস্য আইডি",
   "mobileNumber": " মোবাইল নম্বর",
   "si": "নং",
-  "total": "মোট",
-  "totalItems": "মোট আইটেম",
-  "itemsPerPage:": "প্রতি পাতায় আইটেম :",
-  "pageRangeText": "`নং পৃষ্ঠা ${t(total,total)} টির মধ্যে`",
-  "sarchByName/NID/BRID/Mobile": "নাম/এনআইডি/বিআরআইডি/মোবাইল দ্বারা অনুসন্ধান",
-  "otherAddress": " ঠিকানা(বাড়ি নম্বর/রাস্তা নম্বর)",
-  "serviceForm": "সেবা ফর্ম",
-  "serviceHistory": "সেবার ইতিহাস",
-  "profile": "প্রোফাইল",
+  "total":"মোট",
+  "totalItems":"মোট আইটেম",
+  "itemsPerPage:":"প্রতি পাতায় আইটেম :",
+  "pageRangeText":"`নং পৃষ্ঠা ${t(total,total)} টির মধ্যে`",
+  "sarchByName/NID/BRID/Mobile":"নাম/এনআইডি/বিআরআইডি/মোবাইল দ্বারা অনুসন্ধান",
+  "otherAddress":" ঠিকানা(বাড়ি নম্বর/রাস্তা নম্বর)",
+  "serviceForm":"সেবা ফর্ম",
+  "serviceHistory":"সেবার ইতিহাস",
+  "profile":"প্রোফাইল",
   "division": "বিভাগ",
   "district": "জেলা",
   "upazila": "উপজেলা",
