--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -94,5 +94,7 @@
   "updatePatientSuccessSnackbarSubtitle": "The patient's information has been successfully updated",
   "updatePatientSuccessSnackbarTitle": "Patient Details Updated",
   "yearsEstimateRequired": "Years estimate required",
-  "yes": "Yes"
+  "yes": "Yes",
+  "search":"search",
+  "Search":"Search"
 }
