--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -62,7 +62,7 @@
   "patient": "Patient",
   "patientRegistrationBreadcrumb": "Patient Registration",
   "registerPatient": "Register Patient",
-  "registerPatientNotSuccessSnackbarSubtitle": "Because data not able to save into costume database",
+  "registerPatientNotSuccessSnackbarSubtitle": "Because data not able to save into custom database",
   "registerPatientNotSuccessSnackbarTitle": "Patient Registration Failed",
   "registerPatientSuccessSnackbarSubtitle": "The patient can now be found by searching for them using their name or ID number",
   "registerPatientSuccessSnackbarTitle": "New Patient Created",
