Added dropdien for registration other section

--- a/packages/esm-patient-registration-app/translations/bn.json
+++ b/packages/esm-patient-registration-app/translations/bn.json
@@ -136,7 +136,7 @@
   "search":"অনুসন্ধান",
   "Search":"অনুসন্ধান",
   "id":"আইডি",
-  "locationsSection":"ঠিকানা বিবরণ",
+  "locationsSection":"বর্তমান ঠিকানা",
   "otherInfoSection":"অন্যান্য তথ্য",
   "0": "০",
   "1": "১",
