--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -59,7 +59,7 @@
   "invalidInput": "Invalid Input",
   "isDeadInputLabel": "Is Dead",
   "jumpTo": "Jump to",
-  "locationsSection": "Location Details",
+  "locationsSection": "Present Address",
   "male": "Male",
   "maritalStatus": "Marital Status",
   "middleNameLabelText": "Middle Name",
